[tool.poetry]
name = "cardtrader-auto-seller"
version = "0.1.0"
description = ""
authors = ["FMarazzi <francesco.marazzi90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.2.5"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
